# graphcore_snn

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  make_all.py  questions.md  suggestions.md
archiv/: Makefile  custom_op.cpp  select_spikes_twoThresh.cpp
benchmarking/: benchmark_dataset.py  benchmark_dataset_gpu.py  benchmark_multi_layer_nmnist.py  benchmark_multi_layer_nmnist_gpu.py  benchmark_structure_array.py  benchmarking_script.py  create_sbatch.py  jobscript.sh  keras_train_util.py  keras_train_util_ipu.py  log_multi_layer_weightMul4.0_statesPerIPU02.out  multi_ipu.py  multi_proc_helper.py  multi_testrun.sh  nmnist_util.py  performance_jobscript.sh  runfile_benchmark_dataset.sh  runfile_multi_ipu.sh  runfile_multi_ipu_reportGen.sh  runfile_multi_neuron.sh  runfile_nmnist.sh  runfile_nmnist_multi_ipu_benchmark.sh  runfile_nmnist_multi_ipu_benchmark_gpu.sh  runfile_nmnist_multi_layer_benchmark.sh  runfile_nmnist_multi_layer_benchmark_gpu.sh  runfile_randman.sh  runfile_random.sh  runfile_system_analyser.sh  runfile_test.sh  sparse_grad_checks.py  testrun.sh  tile_mapping.py  train_nmnist.py  train_randman.py  train_random.py
custom_dyn_dense_sparse_matmul/: Makefile  README.md  tf_code.py
custom_lif_multi_layer/: README.md  benchmark_dataloader.py  keras_timing.py  keras_timing_ipu.py  questions.md  train_nmnist.py
custom_lif_single_layer/: README.md  custom_codelet.cpp  jax_snn.py  keras_timing.py  keras_timing_ipu.py  notes.md  poplar_code.cpp  profiling.py  test_grad_when_spike.py  tf_code.py  timing_ipu.py
custom_ops/: CMakeLists.txt
initial_feature_request/: README.md  data.py  issues.md  questions.md  scaling_rnn.py
lib/: CMakeLists.txt
lib/custom_dynamic_sparse/: custom_codelet_path.cpp  string_util.cpp  vector_util.cpp  vector_utils.cpp
lib/custom_dynamic_sparse/custom_dyn_dense_sparse_matmul/: tf_code.py
lib/custom_dynamic_sparse/custom_dyn_dense_sparse_matmul/batched/standard/: custom_codelet.cpp  poplar_code.cpp  poplar_code.hpp
lib/custom_dynamic_sparse/custom_dyn_dense_sparse_matmul/batched/transpose/: custom_codelet.cpp
lib/custom_dynamic_sparse/custom_select_spikes/twoThresh/: custom_codelet.cpp  poplar_code.cpp  poplar_code.hpp
reproducer_compile_times/: Makefile  keras_train_util_ipu.py
(+75 files in other folders)
